--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #c4a484; /* Light brown */
-    color: white;
+    background-color: #534436; /* Light brown */
+    color: rgb(239, 224, 219);
     text-align: center;
     font-family: Arial, sans-serif;
 }
